--- a/src/module/signIn/Signin.module.scss
+++ b/src/module/signIn/Signin.module.scss
@@ -1,10 +1,10 @@
 @import "../../Sass/mixin";
 @import "../../Sass/variables";
 
-.signin-container {
+.signin_container {
   width: 100%;
   height: 100vh;
-  &-content2 {
+  &_content2 {
     width: 100vw;
     height: 100vh;
     background-image: url("./../../assets/signInContainer.png");
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    &-box1 {
+    &_box1 {
       & > h1 {
         font-family: "Lato";
         font-weight: 700;
@@ -24,7 +24,7 @@
         text-align: center;
         color: $lightnevi;
       }
-      &-content {
+      &_content {
         width: 38.7rem;
         height: auto;
         margin: auto;
@@ -32,7 +32,16 @@
         padding: 2.9rem;
         background-color: white;
         border-radius: 9.675px;
-        &-btn {
+        &_forgetpass {
+          margin-top: -80px;
+          float: right;
+          font-weight: 400;
+          font-size: 1.6rem;
+          line-height: 19px;
+          color: $lightnevi;
+          text-decoration: none;
+        }
+        &_btn {
           padding: 9.675px;
           width: 100%;
           height: 42.35px;
@@ -57,7 +66,7 @@
           // }
         }
       }
-      &-btnbox {
+      &_btnbox {
         width: 38.7rem;
         height: auto;
         padding: 0.5rem 2.9rem;
@@ -65,7 +74,7 @@
         @include respond(phone) {
           padding: 2rem;
         }
-        &-continue {
+        &_continue {
           width: 100%;
           height: auto;
           margin-top: 27px;
@@ -98,15 +107,6 @@
       }
     }
   }
-}
-.forgetpass {
-  margin-top: -80px;
-  float: right;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 19px;
-  color: $lightnevi;
-  text-decoration: none;
 }
 .plink {
   color: $blue;
