--- a/src/Sass/_variables.scss
+++ b/src/Sass/_variables.scss
@@ -6,3 +6,7 @@ $lightnevi: #2b4465;
 $blacktext: #111111;
 $skyshede: #00cbfe;
 $lightsky: #00cbfe8f;
+
+// Spacing
+$spacing-unit: 0.4rem;
+$padding: $spacing-unit * 3 $spacing-unit * 6;
