--- a/src/module/dashboard/Dashboard.module.scss
+++ b/src/module/dashboard/Dashboard.module.scss
@@ -1,8 +1,123 @@
 @import "../../Sass/mixin";
 @import "../../Sass/variables";
 
-.dashboard_container{
-    width: 100%;
-    height: 100vh;
-    background-color: #15c2eda0;
+.dashboard_container {
+  width: 100%;
+  height: 100vh;
+  background-color: #15c2eda0;
+  &_content1 {
+    width: 95%;
+    margin: auto;
+    padding: 3rem 0rem;
+    display: flex;
+    justify-content: space-between;
+    h1 {
+      color: $lightnevi;
+      font-weight: 600;
+      font-size: 2rem;
+    }
+    select {
+      padding: 0.5rem 1rem;
+      outline: none;
+      border: none;
+    }
+  }
+  &_content2 {
+    width: 95%;
+    margin: auto;
+    padding: 0.5rem 0rem;
+    // background-color: palevioletred;
+  }
+  &_content3 {
+    width: 95%;
+    margin: auto;
+    margin-top: 3rem;
+    padding: 0.5rem 0rem;
+    background-color: palevioletred;
+    &_chartbox {
+      display: flex;
+      & > *:not(:first-child) {
+        margin-left: 3rem;
+        @include respond(phone){
+            margin-left: 0rem;
+            margin-top: 3rem;
+        }
+      }
+      @include respond(phone) {
+        flex-direction: column;
+      }
+      &_left {
+        width: 74.2rem;
+        height: auto;
+        padding: 0.5rem 0rem;
+        background: #ffffff;
+        border-radius: 10px;
+        @include respond(phone) {
+          width: 100%;
+        }
+      }
+      &_right {
+        width: 52.5rem;
+        height: auto;
+        padding: 0.5rem 0rem;
+        background: #ffffff;
+        border-radius: 10px;
+        @include respond(phone) {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+.analysis_card {
+  //    width: 250px;
+  &_content {
+    display: flex;
+    align-items: center;
+    height: 116px;
+    background: #ffffff;
+    border-radius: 10px;
+    padding: 0rem 2rem;
+    & > *:not(:first-child) {
+      margin-left: 2rem;
+    }
+    &_right {
+      h3 {
+        color: #06152b;
+        font-weight: 700;
+        font-size: 2.2rem;
+        margin-bottom: 0.1rem;
+      }
+      h6 {
+        font-weight: 400;
+        font-size: 1.4rem;
+        line-height: 19px;
+        color: #06152b;
+        opacity: 0.7;
+      }
+      p {
+        font-weight: 400;
+        font-size: 1rem;
+        line-height: 13px;
+        color: #06152b;
+        opacity: 0.7;
+        span {
+          font-weight: 400;
+          font-size: 1rem;
+          line-height: 13px;
+          color: #03a89e;
+          opacity: 0.7;
+          margin-right: 0.5rem;
+        }
+      }
+      //   p:nth-child(3) {
+      //     font-weight: 400;
+      //     font-size: 0.7rem;
+      //     opacity: 0.7;
+      //     span {
+      //       color: #f20a0a;
+      //     }
+      //   }
+    }
+  }
 }
