--- a/src/module/dashboard/Dashboard.module.scss
+++ b/src/module/dashboard/Dashboard.module.scss
@@ -3,7 +3,7 @@
 
 .dashboard_container {
   width: 100%;
-  height: 100vh;
+  height: auto;
   background-color: #15c2eda0;
   &_content1 {
     width: 95%;
@@ -33,14 +33,14 @@
     margin: auto;
     margin-top: 3rem;
     padding: 0.5rem 0rem;
-    background-color: palevioletred;
+    // background-color: palevioletred;
     &_chartbox {
       display: flex;
       & > *:not(:first-child) {
         margin-left: 3rem;
-        @include respond(phone){
-            margin-left: 0rem;
-            margin-top: 3rem;
+        @include respond(phone) {
+          margin-left: 0rem;
+          margin-top: 3rem;
         }
       }
       @include respond(phone) {
@@ -57,11 +57,14 @@
         }
       }
       &_right {
-        width: 52.5rem;
+        width: 42.5rem;
         height: auto;
         padding: 0.5rem 0rem;
         background: #ffffff;
         border-radius: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         @include respond(phone) {
           width: 100%;
         }
@@ -120,4 +123,8 @@
       //   }
     }
   }
+}
+.piechart {
+  width: 50%;
+  height: 50%;
 }
