--- a/src/module/support/Support.module.scss
+++ b/src/module/support/Support.module.scss
@@ -2,7 +2,79 @@
 @import "../../Sass/variables";
 
 .support_container {
+  padding: 1rem 0rem;
   width: 100%;
-  height: 100vh;
+  height: auto;
   background-color: #15c2eda0;
+  &_top {
+    width: 95%;
+    margin: auto;
+    padding: 3rem 0rem;
+    display: flex;
+    justify-content: space-between;
+    h1 {
+      color: $lightnevi;
+      font-weight: 600;
+      font-size: 2rem;
+    }
+    select {
+      padding: 0.5rem 1rem;
+      outline: none;
+      border: none;
+    }
+  }
+  &_middle {
+    width: 95%;
+    margin: auto;
+    margin-top: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 0rem;
+    // background-color: aqua;
+    &_left {
+      width: 50%;
+      // background-color: lightcoral;
+      table {
+        width: 100%;
+        th,
+        td {
+          padding: 0.8rem;
+          text-align: left;
+        }
+        thead th {
+          font-weight: 700;
+          font-size: 1.4rem;
+          line-height: 18px;
+          text-transform: capitalize;
+          color: #2b4465;
+        }
+        tbody td {
+          font-weight: 700;
+          font-size: 1.4rem;
+          line-height: 18px;
+          text-transform: capitalize;
+          color: #8a8a8a;
+        }
+      }
+    }
+    &_right {
+      background: #d9d9d9;
+      border-radius: 1rem;
+      padding: 0.2rem 2rem 0.2rem 2rem;
+      input {
+        outline: none;
+        border: none;
+        background-color: transparent;
+        &::placeholder {
+          color: #8a8a8a;
+          font-weight: 400;
+          font-size: 1rem;
+        }
+      }
+      img {
+        margin-left: -1.5rem;
+      }
+    }
+  }
 }
