--- a/src/module/support/Support.module.scss
+++ b/src/module/support/Support.module.scss
@@ -107,8 +107,7 @@
               color: $lightnevi;
               font-weight: 600;
               white-space: nowrap;
-              padding: 0rem $spacing-unit * 3;
-              padding-bottom: $spacing-unit * 3;
+              padding: 1.5rem 1.2rem;
               // background-color: #6ec4cf;
               &:nth-child(1) {
                 width: 28%;
