--- a/src/module/settings/Settings.module.scss
+++ b/src/module/settings/Settings.module.scss
@@ -2,7 +2,64 @@
 @import "../../Sass/variables";
 
 .setting_container {
-  width: 100%;
   height: 100vh;
-  background-color: #15c2eda0;
+  background-image: url("../../assets/settingBackgroundImage.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.parentContainer {
+  width: 41.5rem;
+  height: auto;
+  padding: 0.5rem 0rem;
+  // background-color: lavenderblush;
+  h1 {
+    font-weight: 700;
+    font-size: 2.9rem;
+    line-height: 35px;
+    text-align: center;
+    color: #2b4465;
+  }
+  p {
+    margin-top: 13px;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 19px;
+    color: #8a8a8a;
+  }
+  &_childContainer {
+    width: 38rem;
+    height: auto;
+    margin: auto;
+    padding: 2rem 2rem;
+    background-color: white;
+    border-radius: 9.675px;
+    margin-top: 2.9rem;
+    border: none;
+    &_btn {
+      height: 42.35px;
+      width: 100%;
+      background: #4edafc;
+      border-radius: 9.675px;
+      border: none;
+      font-weight: 800;
+      font-size: 1.9rem;
+      line-height: 23px;
+      color: #ffffff;
+    }
+    &_auth {
+      margin-top: 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      p {
+        font-weight: 400;
+        font-size: 1.6rem;
+        line-height: 19px;
+        color: #111111;
+      }
+    }
+  }
 }
