--- a/src/module/subscription/Subscription.module.scss
+++ b/src/module/subscription/Subscription.module.scss
@@ -2,8 +2,6 @@
 @import "../../Sass/variables";
 
 .subscription_container {
-  width: 100%;
-  height: auto;
   background-color: #15c2eda0;
   padding: 1rem 0rem;
   width: 100%;
@@ -32,35 +30,9 @@
     margin-top: 4rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: right;
     padding: 0.5rem 0rem;
     // background-color: aqua;
-    &_left {
-      width: 70%;
-      // background-color: lightcoral;
-      table {
-        width: 100%;
-        th,
-        td {
-          padding: 0.8rem;
-          text-align: left;
-        }
-        thead th {
-          font-weight: 700;
-          font-size: 1.4rem;
-          line-height: 18px;
-          text-transform: capitalize;
-          color: #2b4465;
-        }
-        tbody td {
-          font-weight: 700;
-          font-size: 1.4rem;
-          line-height: 18px;
-          text-transform: capitalize;
-          color: #8a8a8a;
-        }
-      }
-    }
     &_right {
       background: #d9d9d9;
       border-radius: 1rem;
