--- a/src/module/subscription/Subscription.module.scss
+++ b/src/module/subscription/Subscription.module.scss
@@ -2,10 +2,10 @@
 @import "../../Sass/variables";
 
 .subscription_container {
-  background-color: #15c2eda0;
   padding: 1rem 0rem;
+  padding-bottom: 2rem;
   width: 100%;
-  height: 100vh;
+  height: auto;
   background-color: #15c2ed49;
   &_top {
     width: 95%;
@@ -61,7 +61,9 @@
     justify-content: space-between;
     &_left {
       width: 65%;
-
+      @include respond(phone) {
+        width: 100%;
+      }
       & > table {
         width: 100%;
         border-collapse: collapse;
@@ -126,6 +128,9 @@
       }
     }
     &_right {
+      @include respond(phone) {
+        display: none;
+      }
       p {
         font-size: 1rem;
         line-height: 12px;
