--- a/src/module/support/Support.module.scss
+++ b/src/module/support/Support.module.scss
@@ -33,8 +33,13 @@
     justify-content: space-between;
     padding: 0.5rem 0rem;
     // background-color: aqua;
+
     @include respond(phone) {
       flex-direction: column;
+      align-items: flex-start;
+      & > *:not(:first-child) {
+        margin-top: 1rem;
+      }
     }
     &_left {
       width: 70%;
@@ -93,7 +98,9 @@
     justify-content: space-between;
     &_left {
       width: 75%;
-
+      @include respond(phone) {
+        width: 100%;
+      }
       & > table {
         width: 100%;
         border-collapse: collapse;
@@ -158,6 +165,9 @@
       }
     }
     &_right {
+      @include respond(phone) {
+        display: none;
+      }
       p {
         font-size: 1rem;
         line-height: 12px;
@@ -167,3 +177,5 @@
     }
   }
 }
+
+
